--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -24,4 +24,4 @@ jobs:
 
     # Runs a single command using the runners shell
     - name: Run a one-line script
-      run: bash 2fa.bash
+      run: 2fa.bash
